--- a/Vidly/Views/Customers/Details.cshtml
+++ b/Vidly/Views/Customers/Details.cshtml
@@ -7,3 +7,11 @@
 
 <h3>@Model.Name</h3>
 
+<ul>
+    <li>Membership Type: @Model.MembershipType.Name</li>
+    @if (Model.Birthdate.HasValue)
+    {
+    <li>Birthdate: @Model.Birthdate.Value.ToShortDateString()</li>
+    }
+</ul>
+
