--- a/Vidly/Views/Movies/Index.cshtml
+++ b/Vidly/Views/Movies/Index.cshtml
@@ -10,9 +10,19 @@
 
 <h2> Movies </h2>
 
-<ul class="list-group">
-    @foreach (var movie in Model)
-    {
-        <li class="list-group-item"> @movie.Name </li>
-    }
-</ul>
+<table class="table table-bordered table-hover">
+    <thead>
+        <th>Movie</th>
+        <th>Genre</th>
+    </thead>
+        <tbody>
+            @foreach (var movie in Model)
+            {
+                <tr>
+                    <td>@Html.ActionLink(movie.Name,"Details","Movies",new { id = movie.Id }, null)</td>
+                    <td>@movie.Genre.Name</td>
+                </tr>
+            }
+
+        </tbody>
+</table>
